# solana-donation-account

./: .gitignore  Anchor.toml  README.md  doctor.sh  package-lock.json  package.json
.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  test-ledger-log.txt  tower-1_9-iYRqGQwiyxV42FcbAspZpbUDK1eFkFSm1qWcpPNRvnp.bin.new  validator-keypair.json  vote-account-keypair.json
.anchor/test-ledger/rocksdb/: 000079.sst  000080.sst  000081.sst  000082.sst  000083.sst  000084.sst  000085.sst  IDENTITY  LOG  LOG.old.1651623474365413  MANIFEST-000086
.github/: dependabot.yml
.github/workflows/: build.yml  main.yml
programs/donation-solana/src/: lib.rs
src/client/: donating_account.ts  main.ts
src/program-rust/: Cargo.toml  Xargo.toml
src/program-rust/src/: lib.rs
src/program-rust/tests/: lib.rs
